--- a/My-Challenge-Begins/style/style.css
+++ b/My-Challenge-Begins/style/style.css
@@ -30,7 +30,7 @@ nav button {
     height: 652px;
     margin: 0 auto;
     margin-top: 20px;
-    background-image: url(/B10A1-Challenge-Begins/assets/Hero-bg.png);
+    background-image: url(../../B10A1-Challenge-Begins/assets/Hero-bg.png);
 }
 
 .banner-item {
