--- a/My-Challenge-Begins/style/style.css
+++ b/My-Challenge-Begins/style/style.css
@@ -319,7 +319,7 @@ p {
 .support-section {
     width: 1140px;
     height: 313px;
-    background: url(/B10A1-Challenge-Begins/assets/handshake.jpg);
+    background: url(../../B10A1-Challenge-Begins/assets/handshake.jpg);
     background-color: rgba(0, 0, 0, 0.6);
     background-position: center;
     background-repeat: no-repeat;
